5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1644_869.log
== TEST (2019-04-11 10:20:24) 
-- CODE:
precosd = float(input('preco sem desconto: '))
if (precosd >= 200)
 print(precosd*5%)
-- ERROR:
File "XXXX", line 2
    if (precosd >= 200)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:20:47) 
-- CODE:
precosd = float(input('preco sem desconto: '))
if (precosd >= 200):
 print(precosd*5%)
-- ERROR:
File "XXXX", line 3
    print(precosd*5%)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:20:56) 
-- CODE:
precosd = float(input('preco sem desconto: '))
if (precosd >= 200):
   print(precosd*5%)
-- ERROR:
File "XXXX", line 3
    print(precosd*5%)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:01:09) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco <= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
-- ERROR:
File "XXXX", line 3
    print(precosd*5%)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:02:15) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco <= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
else:
	preco = 0
-- ERROR:
File "XXXX", line 3
    print(precosd*5%)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:02:43) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:02:50) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))

-- EXECUTION TIME:
0.149492
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:10:18) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.5
	print(round(preco, 2))

-- OUTPUT:
100.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:10:21) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.5
	print(round(preco, 2))

-- EXECUTION TIME:
0.178674
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
100.05
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
100.27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:10:33) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.5
	print(round(preco, 2))

-- OUTPUT:
100.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:10:47) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:10:57) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))

-- EXECUTION TIME:
0.153315
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:27:40) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:45:53) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:02:48) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:03:01) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:03:17) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:03:23) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:03:36) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:04:05) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:04:18) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:07:34) 
-- CODE:
preco =  float(input("Valor da Compra: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
